# fraud-modeling

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/ml/: model.ipynb
src/ml/mlruns/0/: meta.yaml
src/ml/mlruns/665496595189364344/: meta.yaml
src/ml/mlruns/665496595189364344/060ab5db77ed4611b3b71949098364df/: meta.yaml
src/ml/mlruns/665496595189364344/27ec13efa87c43d3a9bdfc0b77d39da2/: meta.yaml
src/ml/mlruns/665496595189364344/41ad9510e93944daa8102a2eb994b1a2/: meta.yaml
src/ml/mlruns/665496595189364344/4e0ea9de02af497da0cb70dbe8ae6281/: meta.yaml
src/ml/mlruns/665496595189364344/7017b0755ab94fceba831aa5bdec9006/: meta.yaml
src/ml/mlruns/665496595189364344/725ba946e58845fc8fcc00959780415a/: meta.yaml
src/ml/mlruns/665496595189364344/9c7503afff4b461293fc3f2372a7524e/: meta.yaml
src/ml/mlruns/665496595189364344/a273590b256d47bd9601a79d35bc8d4c/: meta.yaml
src/ml/mlruns/665496595189364344/aac58d34040c42c0ac98d48d797fd449/: meta.yaml
src/ml/mlruns/665496595189364344/b7353f8facca445c9dc1261afeff7d6d/: meta.yaml
src/ml/mlruns/665496595189364344/bc14cb3c65b14d0682038897fbc5e865/: meta.yaml
src/ml/mlruns/665496595189364344/c146d36f1e334a008f7f6bc4c1f8d3a3/: meta.yaml
src/ml/mlruns/665496595189364344/d29d751d5e9546018f6a0290414d0b74/: meta.yaml
src/ml/mlruns/665496595189364344/d7204d97d6104fcd83a96facb8409995/: meta.yaml
src/ml/mlruns/665496595189364344/ec85fdb1b8cc483c8d864ef3da6729ee/: meta.yaml
src/model/: predict-test.py  predict.py  train.py
src/notebook/: model.ipynb
(+416 files in other folders)
